# flask-movies

./: .gitignore  Pipfile  README.md  config.py  docker-compose.yml  run.py
app/: __init__.py
nginx/: Dockerfile  (+2 more)
web/: Dockerfile  Pipfile  config.py  pyproject.toml
web/app/: __init__.py  decorators.py  email.py  models.py
web/app/auth/: __init__.py  forms.py  views.py
web/app/auth/static/css/: styles.css
web/app/auth/templates/auth/: confirmation_email.html  confirmation_email.txt  login.html  register.html  unconfirmed.html
web/app/main/: __init__.py  views.py
web/app/main/static/css/: styles.css
web/app/main/static/js/: index.js  movies-controller.js  movies-model.js  movies-view.js
web/app/main/templates/main/: base.html  index.html
web/app/movie/: __init__.py  forms.py  views.py
web/app/movie/static/css/: styles.css
web/app/movie/static/js/: movie-data.js  movie-view.js  movie.js
web/app/movie/templates/movie/: movie.html
web/app/static/css/: styles.css
web/app/templates/: _formutils.html  _pagination.html  base.html
web/app/user_profile/: __init__.py  forms.py  views.py
web/app/user_profile/templates/user_profile/: edit_profile.html  profile.html
web/migrations/versions/: 1e85cb795927_initial_migration.py  3cc68b810d17_add_about_me_location_and_name_to_user_.py  b154d6c5128e_add_roles_model.py  b154d6c5128e_add_roles_model.py.py  b5401c1eee41_add_last_seen_column_in_user_model.py  b5f6f0359153_add_confirmed_boolean_column_to_user_.py  c4ff2748e8dc_add_likes_model.py  df7ee228ff05_add_comments.py  ff1ba63074a7_add_roles_model.py
(+5 files in other folders)
