[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["jkrol1 <jk.jankrol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
click = "^8.1.3"
Flask-WTF = "^1.0.1"
gunicorn = "^20.1.0"
Flask-PageDown = "^0.4.0"
bleach = "^5.0.0"
Markdown = "^3.3.7"
Flask-Login = "^0.6.1"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^3.1.0"
Flask-Moment = "^1.0.2"
python-dotenv = "^0.20.0"
email-validator = "^1.2.1"
psycopg2-binary = "^2.9.3"
itsdangerous = "2.0.1"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
